Format all files with Ruff

--- a/examples/medical_mayo_pbc.ipynb
+++ b/examples/medical_mayo_pbc.ipynb
@@ -86,6 +86,7 @@
     "pd.set_option(\"display.max_columns\", None)\n",
     "\n",
     "from IPython.core.display import display, HTML\n",
+    "\n",
     "display(HTML(\"<style>.container { width:99% !important; }</style>\"))"
    ]
   },
@@ -682,9 +683,15 @@
     "fig, (ax1, ax2) = plt.subplots(nrows=1, ncols=2, sharey=True, figsize=(20, 5))\n",
     "fontsize = 20\n",
     "\n",
-    "utils.plot_unit_distributions(\n",
-    "    df=df_full, variable=\"histologic_stage\", treatment=None, bins=None, axis=ax1,\n",
-    "),\n",
+    "(\n",
+    "    utils.plot_unit_distributions(\n",
+    "        df=df_full,\n",
+    "        variable=\"histologic_stage\",\n",
+    "        treatment=None,\n",
+    "        bins=None,\n",
+    "        axis=ax1,\n",
+    "    ),\n",
+    ")\n",
     "\n",
     "ax1.set_xlabel(\"Histologic Stage\", fontsize=fontsize)\n",
     "ax1.set_ylabel(\"Counts\", fontsize=fontsize)\n",
@@ -693,7 +700,11 @@
     "ax1.set_xticklabels(ax1.get_xticklabels())\n",
     "\n",
     "utils.plot_unit_distributions(\n",
-    "    df=df_full, variable=\"histologic_stage\", treatment=\"treatment\", bins=None, axis=ax2,\n",
+    "    df=df_full,\n",
+    "    variable=\"histologic_stage\",\n",
+    "    treatment=\"treatment\",\n",
+    "    bins=None,\n",
+    "    axis=ax2,\n",
     ")\n",
     "\n",
     "ax2.set_xlabel(\"Histologic Stage\", fontsize=fontsize)\n",
@@ -734,9 +745,15 @@
     "fig, (ax1, ax2) = plt.subplots(nrows=1, ncols=2, sharey=True, figsize=(20, 5))\n",
     "fontsize = 20\n",
     "\n",
-    "utils.plot_unit_distributions(\n",
-    "    df=df_full, variable=\"sex\", treatment=None, bins=None, axis=ax1,\n",
-    "),\n",
+    "(\n",
+    "    utils.plot_unit_distributions(\n",
+    "        df=df_full,\n",
+    "        variable=\"sex\",\n",
+    "        treatment=None,\n",
+    "        bins=None,\n",
+    "        axis=ax1,\n",
+    "    ),\n",
+    ")\n",
     "\n",
     "ax1.set_xlabel(\"Sex\", fontsize=fontsize)\n",
     "ax1.set_ylabel(\"Counts\", fontsize=fontsize)\n",
@@ -745,7 +762,11 @@
     "ax1.set_xticklabels(ax1.get_xticklabels())\n",
     "\n",
     "utils.plot_unit_distributions(\n",
-    "    df=df_full, variable=\"sex\", treatment=\"treatment\", bins=None, axis=ax2,\n",
+    "    df=df_full,\n",
+    "    variable=\"sex\",\n",
+    "    treatment=\"treatment\",\n",
+    "    bins=None,\n",
+    "    axis=ax2,\n",
     ")\n",
     "\n",
     "ax2.set_xlabel(\"Sex\", fontsize=fontsize)\n",
@@ -783,9 +804,15 @@
     "fig, (ax1, ax2) = plt.subplots(nrows=1, ncols=2, sharey=True, figsize=(20, 5))\n",
     "fontsize = 20\n",
     "\n",
-    "utils.plot_unit_distributions(\n",
-    "    df=df_full, variable=\"status\", treatment=None, bins=None, axis=ax1,\n",
-    "),\n",
+    "(\n",
+    "    utils.plot_unit_distributions(\n",
+    "        df=df_full,\n",
+    "        variable=\"status\",\n",
+    "        treatment=None,\n",
+    "        bins=None,\n",
+    "        axis=ax1,\n",
+    "    ),\n",
+    ")\n",
     "\n",
     "ax1.set_xlabel(\"Status\", fontsize=fontsize)\n",
     "ax1.set_ylabel(\"Counts\", fontsize=fontsize)\n",
@@ -794,7 +821,11 @@
     "ax1.set_xticklabels(ax1.get_xticklabels())\n",
     "\n",
     "utils.plot_unit_distributions(\n",
-    "    df=df_full, variable=\"status\", treatment=\"treatment\", bins=None, axis=ax2,\n",
+    "    df=df_full,\n",
+    "    variable=\"status\",\n",
+    "    treatment=\"treatment\",\n",
+    "    bins=None,\n",
+    "    axis=ax2,\n",
     ")\n",
     "\n",
     "ax2.set_xlabel(\"Status\", fontsize=fontsize)\n",
@@ -832,9 +863,15 @@
     "fig, (ax1, ax2) = plt.subplots(nrows=1, ncols=2, sharey=True, figsize=(20, 5))\n",
     "fontsize = 20\n",
     "\n",
-    "utils.plot_unit_distributions(\n",
-    "    df=df_full, variable=\"age\", treatment=None, bins=25, axis=ax1,\n",
-    "),\n",
+    "(\n",
+    "    utils.plot_unit_distributions(\n",
+    "        df=df_full,\n",
+    "        variable=\"age\",\n",
+    "        treatment=None,\n",
+    "        bins=25,\n",
+    "        axis=ax1,\n",
+    "    ),\n",
+    ")\n",
     "\n",
     "ax1.set_xlabel(\"Age\", fontsize=fontsize)\n",
     "ax1.set_ylabel(\"Counts\", fontsize=fontsize)\n",
@@ -843,7 +880,11 @@
     "ax1.set_xticklabels(ax1.get_xticklabels(), rotation=30)\n",
     "\n",
     "utils.plot_unit_distributions(\n",
-    "    df=df_full, variable=\"age\", treatment=\"treatment\", bins=25, axis=ax2,\n",
+    "    df=df_full,\n",
+    "    variable=\"age\",\n",
+    "    treatment=\"treatment\",\n",
+    "    bins=25,\n",
+    "    axis=ax2,\n",
     ")\n",
     "\n",
     "ax2.set_xlabel(\"Age\", fontsize=fontsize)\n",
@@ -1222,7 +1263,11 @@
     "y_split = np.append(y_os, y_treatment, axis=0)\n",
     "w_split = np.append(w_os, w_treatment, axis=0)\n",
     "\n",
-    "X_split.shape, y_split.shape, w_split.shape  # Should all be equal in the first dimension"
+    "(\n",
+    "    X_split.shape,\n",
+    "    y_split.shape,\n",
+    "    w_split.shape,\n",
+    ")  # Should all be equal in the first dimension"
    ]
   },
   {
@@ -1880,9 +1925,7 @@
     "        )\n",
     "        model_eval_dict[dataset].update(\n",
     "            {\n",
-    "                str(model)\n",
-    "                .split(\".\")[-1]\n",
-    "                .split(\" \")[0]: {\n",
+    "                str(model).split(\".\")[-1].split(\" \")[0]: {\n",
     "                    \"avg_preds\": avg_preds,\n",
     "                    \"all_preds\": all_preds,\n",
     "                    \"avg_eval\": avg_eval,\n",
