--- a/examples/model_iteration.ipynb
+++ b/examples/model_iteration.ipynb
@@ -85,6 +85,7 @@
     "pd.set_option(\"display.max_columns\", None)\n",
     "\n",
     "from IPython.core.display import display, HTML\n",
+    "\n",
     "display(HTML(\"<style>.container { width:99% !important; }</style>\"))"
    ]
   },
@@ -335,7 +336,11 @@
     "y_split_hillstrom = np.append(y_os_hillstrom, y_women, axis=0)\n",
     "w_split_hillstrom = np.append(w_os_hillstrom, w_women, axis=0)\n",
     "\n",
-    "X_split_hillstrom.shape, y_split_hillstrom.shape, w_split_hillstrom.shape  # Should all be equal in the first dimension"
+    "(\n",
+    "    X_split_hillstrom.shape,\n",
+    "    y_split_hillstrom.shape,\n",
+    "    w_split_hillstrom.shape,\n",
+    ")  # Should all be equal in the first dimension"
    ]
   },
   {
@@ -375,7 +380,14 @@
     "    random_state=42,\n",
     "    maintain_proportions=True,\n",
     ")\n",
-    "X_train_hillstrom.shape, X_test_hillstrom.shape, y_train_hillstrom.shape, y_test_hillstrom.shape, w_train_hillstrom.shape, w_test_hillstrom.shape"
+    "(\n",
+    "    X_train_hillstrom.shape,\n",
+    "    X_test_hillstrom.shape,\n",
+    "    y_train_hillstrom.shape,\n",
+    "    y_test_hillstrom.shape,\n",
+    "    w_train_hillstrom.shape,\n",
+    "    w_test_hillstrom.shape,\n",
+    ")"
    ]
   },
   {
@@ -593,7 +605,11 @@
     "y_split_mayo = np.append(y_os_mayo, y_treatment_mayo, axis=0)\n",
     "w_split_mayo = np.append(w_os_mayo, w_treatment_mayo, axis=0)\n",
     "\n",
-    "X_split_mayo.shape, y_split_mayo.shape, w_split_mayo.shape  # Should all be equal in the first dimension"
+    "(\n",
+    "    X_split_mayo.shape,\n",
+    "    y_split_mayo.shape,\n",
+    "    w_split_mayo.shape,\n",
+    ")  # Should all be equal in the first dimension"
    ]
   },
   {
@@ -634,7 +650,14 @@
     "    maintain_proportions=True,\n",
     ")\n",
     "\n",
-    "X_train_mayo.shape, X_test_mayo.shape, y_train_mayo.shape, y_test_mayo.shape, w_train_mayo.shape, w_test_mayo.shape"
+    "(\n",
+    "    X_train_mayo.shape,\n",
+    "    X_test_mayo.shape,\n",
+    "    y_train_mayo.shape,\n",
+    "    y_test_mayo.shape,\n",
+    "    w_train_mayo.shape,\n",
+    "    w_test_mayo.shape,\n",
+    ")"
    ]
   },
   {
@@ -773,7 +796,11 @@
     "y_split_cmf = np.append(y_os_cmf, y_treatment_cmf, axis=0)\n",
     "w_split_cmf = np.append(w_os_cmf, w_treatment_cmf, axis=0)\n",
     "\n",
-    "X_split_cmf.shape, y_split_cmf.shape, w_split_cmf.shape  # Should all be equal in the first dimension"
+    "(\n",
+    "    X_split_cmf.shape,\n",
+    "    y_split_cmf.shape,\n",
+    "    w_split_cmf.shape,\n",
+    ")  # Should all be equal in the first dimension"
    ]
   },
   {
@@ -814,7 +841,14 @@
     "    maintain_proportions=True,\n",
     ")\n",
     "\n",
-    "X_train_cmf.shape, X_test_cmf.shape, y_train_cmf.shape, y_test_cmf.shape, w_train_cmf.shape, w_test_cmf.shape"
+    "(\n",
+    "    X_train_cmf.shape,\n",
+    "    X_test_cmf.shape,\n",
+    "    y_train_cmf.shape,\n",
+    "    y_test_cmf.shape,\n",
+    "    w_train_cmf.shape,\n",
+    "    w_test_cmf.shape,\n",
+    ")"
    ]
   },
   {
@@ -998,9 +1032,7 @@
     "\n",
     "            model_eval_dict[dataset].update(\n",
     "                {\n",
-    "                    str(model)\n",
-    "                    .split(\".\")[-1]\n",
-    "                    .split(\" \")[0]: {\n",
+    "                    str(model).split(\".\")[-1].split(\" \")[0]: {\n",
     "                        \"avg_preds\": avg_preds,\n",
     "                        \"all_preds\": all_preds,\n",
     "                        \"avg_eval\": avg_eval,\n",
@@ -1053,9 +1085,7 @@
     "\n",
     "            model_eval_dict[dataset].update(\n",
     "                {\n",
-    "                    str(model)\n",
-    "                    .split(\".\")[-1]\n",
-    "                    .split(\" \")[0]: {\n",
+    "                    str(model).split(\".\")[-1].split(\" \")[0]: {\n",
     "                        \"avg_preds\": avg_preds,\n",
     "                        \"all_preds\": all_preds,\n",
     "                        \"avg_eval\": avg_eval,\n",
