--- a/examples/socioeconomic_cmf_micro.ipynb
+++ b/examples/socioeconomic_cmf_micro.ipynb
@@ -75,6 +75,7 @@
     "pd.set_option(\"display.max_columns\", None)\n",
     "\n",
     "from IPython.core.display import display, HTML\n",
+    "\n",
     "display(HTML(\"<style>.container { width:99% !important; }</style>\"))"
    ]
   },
@@ -3008,9 +3009,15 @@
     "fig, (ax1, ax2) = plt.subplots(nrows=1, ncols=2, sharey=True, figsize=(20, 5))\n",
     "fontsize = 20\n",
     "\n",
-    "utils.plot_unit_distributions(\n",
-    "    df=df_full, variable=\"children_1\", treatment=None, bins=None, axis=ax1,\n",
-    "),\n",
+    "(\n",
+    "    utils.plot_unit_distributions(\n",
+    "        df=df_full,\n",
+    "        variable=\"children_1\",\n",
+    "        treatment=None,\n",
+    "        bins=None,\n",
+    "        axis=ax1,\n",
+    "    ),\n",
+    ")\n",
     "\n",
     "ax1.set_xlabel(\"children_1\", fontsize=fontsize)\n",
     "ax1.set_ylabel(\"Counts\", fontsize=fontsize)\n",
@@ -3019,7 +3026,11 @@
     "ax1.set_xticklabels(ax1.get_xticklabels())\n",
     "\n",
     "utils.plot_unit_distributions(\n",
-    "    df=df_full, variable=\"children_1\", treatment=\"treatment\", bins=None, axis=ax2,\n",
+    "    df=df_full,\n",
+    "    variable=\"children_1\",\n",
+    "    treatment=\"treatment\",\n",
+    "    bins=None,\n",
+    "    axis=ax2,\n",
     ")\n",
     "\n",
     "ax2.set_xlabel(\"children_1\", fontsize=fontsize)\n",
@@ -3057,9 +3068,15 @@
     "fig, (ax1, ax2) = plt.subplots(nrows=1, ncols=2, sharey=True, figsize=(20, 5))\n",
     "fontsize = 20\n",
     "\n",
-    "utils.plot_unit_distributions(\n",
-    "    df=df_full, variable=\"hhsize_1\", treatment=None, bins=None, axis=ax1,\n",
-    "),\n",
+    "(\n",
+    "    utils.plot_unit_distributions(\n",
+    "        df=df_full,\n",
+    "        variable=\"hhsize_1\",\n",
+    "        treatment=None,\n",
+    "        bins=None,\n",
+    "        axis=ax1,\n",
+    "    ),\n",
+    ")\n",
     "\n",
     "ax1.set_xlabel(\"hhsize_1\", fontsize=fontsize)\n",
     "ax1.set_ylabel(\"Counts\", fontsize=fontsize)\n",
@@ -3068,7 +3085,11 @@
     "ax1.set_xticklabels(ax1.get_xticklabels())\n",
     "\n",
     "utils.plot_unit_distributions(\n",
-    "    df=df_full, variable=\"hhsize_1\", treatment=\"treatment\", bins=None, axis=ax2,\n",
+    "    df=df_full,\n",
+    "    variable=\"hhsize_1\",\n",
+    "    treatment=\"treatment\",\n",
+    "    bins=None,\n",
+    "    axis=ax2,\n",
     ")\n",
     "\n",
     "ax2.set_xlabel(\"hhsize_1\", fontsize=fontsize)\n",
@@ -3106,9 +3127,15 @@
     "fig, (ax1, ax2) = plt.subplots(nrows=1, ncols=2, sharey=True, figsize=(20, 5))\n",
     "fontsize = 20\n",
     "\n",
-    "utils.plot_unit_distributions(\n",
-    "    df=df_full, variable=\"anyloan_1\", treatment=None, bins=None, axis=ax1,\n",
-    "),\n",
+    "(\n",
+    "    utils.plot_unit_distributions(\n",
+    "        df=df_full,\n",
+    "        variable=\"anyloan_1\",\n",
+    "        treatment=None,\n",
+    "        bins=None,\n",
+    "        axis=ax1,\n",
+    "    ),\n",
+    ")\n",
     "\n",
     "ax1.set_xlabel(\"anyloan_1\", fontsize=fontsize)\n",
     "ax1.set_ylabel(\"Counts\", fontsize=fontsize)\n",
@@ -3117,7 +3144,11 @@
     "ax1.set_xticklabels(ax1.get_xticklabels())\n",
     "\n",
     "utils.plot_unit_distributions(\n",
-    "    df=df_full, variable=\"anyloan_1\", treatment=\"treatment\", bins=None, axis=ax2,\n",
+    "    df=df_full,\n",
+    "    variable=\"anyloan_1\",\n",
+    "    treatment=\"treatment\",\n",
+    "    bins=None,\n",
+    "    axis=ax2,\n",
     ")\n",
     "\n",
     "ax2.set_xlabel(\"anyloan_1\", fontsize=fontsize)\n",
@@ -3155,9 +3186,15 @@
     "fig, (ax1, ax2) = plt.subplots(nrows=1, ncols=2, sharey=True, figsize=(20, 5))\n",
     "fontsize = 20\n",
     "\n",
-    "utils.plot_unit_distributions(\n",
-    "    df=df_full, variable=\"spouse_works_wage_1\", treatment=None, bins=None, axis=ax1,\n",
-    "),\n",
+    "(\n",
+    "    utils.plot_unit_distributions(\n",
+    "        df=df_full,\n",
+    "        variable=\"spouse_works_wage_1\",\n",
+    "        treatment=None,\n",
+    "        bins=None,\n",
+    "        axis=ax1,\n",
+    "    ),\n",
+    ")\n",
     "\n",
     "ax1.set_xlabel(\"spouse_works_wage_1\", fontsize=fontsize)\n",
     "ax1.set_ylabel(\"Counts\", fontsize=fontsize)\n",
@@ -3401,7 +3438,11 @@
     "y_split = np.append(y_os, y_treatment, axis=0)\n",
     "w_split = np.append(w_os, w_treatment, axis=0)\n",
     "\n",
-    "X_split.shape, y_split.shape, w_split.shape  # Should all be equal in the first dimension"
+    "(\n",
+    "    X_split.shape,\n",
+    "    y_split.shape,\n",
+    "    w_split.shape,\n",
+    ")  # Should all be equal in the first dimension"
    ]
   },
   {
@@ -3770,9 +3811,7 @@
     "        )\n",
     "        model_eval_dict[dataset].update(\n",
     "            {\n",
-    "                str(model)\n",
-    "                .split(\".\")[-1]\n",
-    "                .split(\" \")[0]: {\n",
+    "                str(model).split(\".\")[-1].split(\" \")[0]: {\n",
     "                    \"avg_preds\": avg_preds,\n",
     "                    \"all_preds\": all_preds,\n",
     "                    \"avg_eval\": avg_eval,\n",
