--- a/examples/model_iteration.ipynb
+++ b/examples/model_iteration.ipynb
@@ -57,34 +57,41 @@
     }
    ],
    "source": [
-    "import sys\n",
     "import os\n",
+    "import sys\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "\n",
     "from sklearn.ensemble import RandomForestClassifier, RandomForestRegressor\n",
     "\n",
     "from causeinfer import utils\n",
-    "from causeinfer.data import hillstrom, mayo_pbc, cmf_micro\n",
-    "from causeinfer.standard_algorithms.two_model import TwoModel\n",
-    "from causeinfer.standard_algorithms.interaction_term import InteractionTerm\n",
+    "from causeinfer.data import cmf_micro, hillstrom, mayo_pbc\n",
+    "from causeinfer.evaluation import (\n",
+    "    auuc_score,\n",
+    "    eval_table,\n",
+    "    iterate_model,\n",
+    "    plot_batch_responses,\n",
+    "    plot_cum_effect,\n",
+    "    plot_cum_gain,\n",
+    "    plot_qini,\n",
+    "    qini_score,\n",
+    "    signal_to_noise,\n",
+    ")\n",
     "from causeinfer.standard_algorithms.binary_transformation import BinaryTransformation\n",
+    "from causeinfer.standard_algorithms.interaction_term import InteractionTerm\n",
+    "from causeinfer.standard_algorithms.pessimistic import PessimisticUplift\n",
     "from causeinfer.standard_algorithms.quaternary_transformation import (\n",
     "    QuaternaryTransformation,\n",
     ")\n",
     "from causeinfer.standard_algorithms.reflective import ReflectiveUplift\n",
-    "from causeinfer.standard_algorithms.pessimistic import PessimisticUplift\n",
-    "from causeinfer.evaluation import qini_score, auuc_score\n",
-    "from causeinfer.evaluation import plot_cum_effect, plot_cum_gain, plot_qini\n",
-    "from causeinfer.evaluation import plot_batch_responses, signal_to_noise\n",
-    "from causeinfer.evaluation import iterate_model, eval_table\n",
+    "from causeinfer.standard_algorithms.two_model import TwoModel\n",
     "\n",
     "pd.set_option(\"display.max_rows\", 16)\n",
     "pd.set_option(\"display.max_columns\", None)\n",
     "\n",
-    "from IPython.core.display import display, HTML\n",
+    "from IPython.core.display import HTML, display\n",
     "\n",
     "display(HTML(\"<style>.container { width:99% !important; }</style>\"))"
    ]
