add pre-commit configuration file (#33)
* add pre-commit configuration file

* Add ruff workflow, license header check and pyproject.toml

* Add SPDX license identifier - BSD-3-Clause

* delete space after license

* Add new dependencies setup, update dependencies, new env directions

* Format all files with Ruff

* Fix all Ruff check --fix errors

---------

Co-authored-by: Andrew Tavis McAllister <andrew.t.mcallister@gmail.com>

--- a/examples/medical_mayo_pbc.ipynb
+++ b/examples/medical_mayo_pbc.ipynb
@@ -60,32 +60,40 @@
    ],
    "source": [
     "import sys\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "\n",
     "from causeinfer import utils\n",
     "from causeinfer.data import mayo_pbc\n",
-    "from causeinfer.standard_algorithms.two_model import TwoModel\n",
-    "from causeinfer.standard_algorithms.interaction_term import InteractionTerm\n",
+    "from causeinfer.evaluation import (\n",
+    "    auuc_score,\n",
+    "    eval_table,\n",
+    "    iterate_model,\n",
+    "    plot_batch_responses,\n",
+    "    plot_cum_effect,\n",
+    "    plot_cum_gain,\n",
+    "    plot_qini,\n",
+    "    qini_score,\n",
+    "    signal_to_noise,\n",
+    ")\n",
     "from causeinfer.standard_algorithms.binary_transformation import BinaryTransformation\n",
+    "from causeinfer.standard_algorithms.interaction_term import InteractionTerm\n",
+    "from causeinfer.standard_algorithms.pessimistic import PessimisticUplift\n",
     "from causeinfer.standard_algorithms.quaternary_transformation import (\n",
     "    QuaternaryTransformation,\n",
     ")\n",
     "from causeinfer.standard_algorithms.reflective import ReflectiveUplift\n",
-    "from causeinfer.standard_algorithms.pessimistic import PessimisticUplift\n",
-    "from causeinfer.evaluation import qini_score, auuc_score\n",
-    "from causeinfer.evaluation import plot_cum_effect, plot_cum_gain, plot_qini\n",
-    "from causeinfer.evaluation import plot_batch_responses, signal_to_noise\n",
-    "from causeinfer.evaluation import iterate_model, eval_table\n",
+    "from causeinfer.standard_algorithms.two_model import TwoModel\n",
     "\n",
     "pd.set_option(\"display.max_rows\", 16)\n",
     "pd.set_option(\"display.max_columns\", None)\n",
     "\n",
-    "from IPython.core.display import display, HTML\n",
+    "from IPython.core.display import HTML, display\n",
+    "\n",
     "display(HTML(\"<style>.container { width:99% !important; }</style>\"))"
    ]
   },
@@ -682,9 +690,15 @@
     "fig, (ax1, ax2) = plt.subplots(nrows=1, ncols=2, sharey=True, figsize=(20, 5))\n",
     "fontsize = 20\n",
     "\n",
-    "utils.plot_unit_distributions(\n",
-    "    df=df_full, variable=\"histologic_stage\", treatment=None, bins=None, axis=ax1,\n",
-    "),\n",
+    "(\n",
+    "    utils.plot_unit_distributions(\n",
+    "        df=df_full,\n",
+    "        variable=\"histologic_stage\",\n",
+    "        treatment=None,\n",
+    "        bins=None,\n",
+    "        axis=ax1,\n",
+    "    ),\n",
+    ")\n",
     "\n",
     "ax1.set_xlabel(\"Histologic Stage\", fontsize=fontsize)\n",
     "ax1.set_ylabel(\"Counts\", fontsize=fontsize)\n",
@@ -693,7 +707,11 @@
     "ax1.set_xticklabels(ax1.get_xticklabels())\n",
     "\n",
     "utils.plot_unit_distributions(\n",
-    "    df=df_full, variable=\"histologic_stage\", treatment=\"treatment\", bins=None, axis=ax2,\n",
+    "    df=df_full,\n",
+    "    variable=\"histologic_stage\",\n",
+    "    treatment=\"treatment\",\n",
+    "    bins=None,\n",
+    "    axis=ax2,\n",
     ")\n",
     "\n",
     "ax2.set_xlabel(\"Histologic Stage\", fontsize=fontsize)\n",
@@ -734,9 +752,15 @@
     "fig, (ax1, ax2) = plt.subplots(nrows=1, ncols=2, sharey=True, figsize=(20, 5))\n",
     "fontsize = 20\n",
     "\n",
-    "utils.plot_unit_distributions(\n",
-    "    df=df_full, variable=\"sex\", treatment=None, bins=None, axis=ax1,\n",
-    "),\n",
+    "(\n",
+    "    utils.plot_unit_distributions(\n",
+    "        df=df_full,\n",
+    "        variable=\"sex\",\n",
+    "        treatment=None,\n",
+    "        bins=None,\n",
+    "        axis=ax1,\n",
+    "    ),\n",
+    ")\n",
     "\n",
     "ax1.set_xlabel(\"Sex\", fontsize=fontsize)\n",
     "ax1.set_ylabel(\"Counts\", fontsize=fontsize)\n",
@@ -745,7 +769,11 @@
     "ax1.set_xticklabels(ax1.get_xticklabels())\n",
     "\n",
     "utils.plot_unit_distributions(\n",
-    "    df=df_full, variable=\"sex\", treatment=\"treatment\", bins=None, axis=ax2,\n",
+    "    df=df_full,\n",
+    "    variable=\"sex\",\n",
+    "    treatment=\"treatment\",\n",
+    "    bins=None,\n",
+    "    axis=ax2,\n",
     ")\n",
     "\n",
     "ax2.set_xlabel(\"Sex\", fontsize=fontsize)\n",
@@ -783,9 +811,15 @@
     "fig, (ax1, ax2) = plt.subplots(nrows=1, ncols=2, sharey=True, figsize=(20, 5))\n",
     "fontsize = 20\n",
     "\n",
-    "utils.plot_unit_distributions(\n",
-    "    df=df_full, variable=\"status\", treatment=None, bins=None, axis=ax1,\n",
-    "),\n",
+    "(\n",
+    "    utils.plot_unit_distributions(\n",
+    "        df=df_full,\n",
+    "        variable=\"status\",\n",
+    "        treatment=None,\n",
+    "        bins=None,\n",
+    "        axis=ax1,\n",
+    "    ),\n",
+    ")\n",
     "\n",
     "ax1.set_xlabel(\"Status\", fontsize=fontsize)\n",
     "ax1.set_ylabel(\"Counts\", fontsize=fontsize)\n",
@@ -794,7 +828,11 @@
     "ax1.set_xticklabels(ax1.get_xticklabels())\n",
     "\n",
     "utils.plot_unit_distributions(\n",
-    "    df=df_full, variable=\"status\", treatment=\"treatment\", bins=None, axis=ax2,\n",
+    "    df=df_full,\n",
+    "    variable=\"status\",\n",
+    "    treatment=\"treatment\",\n",
+    "    bins=None,\n",
+    "    axis=ax2,\n",
     ")\n",
     "\n",
     "ax2.set_xlabel(\"Status\", fontsize=fontsize)\n",
@@ -832,9 +870,15 @@
     "fig, (ax1, ax2) = plt.subplots(nrows=1, ncols=2, sharey=True, figsize=(20, 5))\n",
     "fontsize = 20\n",
     "\n",
-    "utils.plot_unit_distributions(\n",
-    "    df=df_full, variable=\"age\", treatment=None, bins=25, axis=ax1,\n",
-    "),\n",
+    "(\n",
+    "    utils.plot_unit_distributions(\n",
+    "        df=df_full,\n",
+    "        variable=\"age\",\n",
+    "        treatment=None,\n",
+    "        bins=25,\n",
+    "        axis=ax1,\n",
+    "    ),\n",
+    ")\n",
     "\n",
     "ax1.set_xlabel(\"Age\", fontsize=fontsize)\n",
     "ax1.set_ylabel(\"Counts\", fontsize=fontsize)\n",
@@ -843,7 +887,11 @@
     "ax1.set_xticklabels(ax1.get_xticklabels(), rotation=30)\n",
     "\n",
     "utils.plot_unit_distributions(\n",
-    "    df=df_full, variable=\"age\", treatment=\"treatment\", bins=25, axis=ax2,\n",
+    "    df=df_full,\n",
+    "    variable=\"age\",\n",
+    "    treatment=\"treatment\",\n",
+    "    bins=25,\n",
+    "    axis=ax2,\n",
     ")\n",
     "\n",
     "ax2.set_xlabel(\"Age\", fontsize=fontsize)\n",
@@ -1222,7 +1270,11 @@
     "y_split = np.append(y_os, y_treatment, axis=0)\n",
     "w_split = np.append(w_os, w_treatment, axis=0)\n",
     "\n",
-    "X_split.shape, y_split.shape, w_split.shape  # Should all be equal in the first dimension"
+    "(\n",
+    "    X_split.shape,\n",
+    "    y_split.shape,\n",
+    "    w_split.shape,\n",
+    ")  # Should all be equal in the first dimension"
    ]
   },
   {
@@ -1880,9 +1932,7 @@
     "        )\n",
     "        model_eval_dict[dataset].update(\n",
     "            {\n",
-    "                str(model)\n",
-    "                .split(\".\")[-1]\n",
-    "                .split(\" \")[0]: {\n",
+    "                str(model).split(\".\")[-1].split(\" \")[0]: {\n",
     "                    \"avg_preds\": avg_preds,\n",
     "                    \"all_preds\": all_preds,\n",
     "                    \"avg_eval\": avg_eval,\n",
