--- a/examples/business_hillstrom.ipynb
+++ b/examples/business_hillstrom.ipynb
@@ -60,32 +60,40 @@
    ],
    "source": [
     "import sys\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "\n",
     "from causeinfer import utils\n",
     "from causeinfer.data import hillstrom\n",
-    "from causeinfer.standard_algorithms.two_model import TwoModel\n",
-    "from causeinfer.standard_algorithms.interaction_term import InteractionTerm\n",
+    "from causeinfer.evaluation import (\n",
+    "    auuc_score,\n",
+    "    eval_table,\n",
+    "    iterate_model,\n",
+    "    plot_batch_responses,\n",
+    "    plot_cum_effect,\n",
+    "    plot_cum_gain,\n",
+    "    plot_qini,\n",
+    "    qini_score,\n",
+    "    signal_to_noise,\n",
+    ")\n",
     "from causeinfer.standard_algorithms.binary_transformation import BinaryTransformation\n",
+    "from causeinfer.standard_algorithms.interaction_term import InteractionTerm\n",
+    "from causeinfer.standard_algorithms.pessimistic import PessimisticUplift\n",
     "from causeinfer.standard_algorithms.quaternary_transformation import (\n",
     "    QuaternaryTransformation,\n",
     ")\n",
     "from causeinfer.standard_algorithms.reflective import ReflectiveUplift\n",
-    "from causeinfer.standard_algorithms.pessimistic import PessimisticUplift\n",
-    "from causeinfer.evaluation import qini_score, auuc_score\n",
-    "from causeinfer.evaluation import plot_cum_effect, plot_cum_gain, plot_qini\n",
-    "from causeinfer.evaluation import plot_batch_responses, signal_to_noise\n",
-    "from causeinfer.evaluation import iterate_model, eval_table\n",
+    "from causeinfer.standard_algorithms.two_model import TwoModel\n",
     "\n",
     "pd.set_option(\"display.max_rows\", 16)\n",
     "pd.set_option(\"display.max_columns\", None)\n",
     "\n",
-    "from IPython.core.display import display, HTML\n",
+    "from IPython.core.display import HTML, display\n",
+    "\n",
     "display(HTML(\"<style>.container { width:99% !important; }</style>\"))"
    ]
   },
@@ -623,9 +631,15 @@
     "fig, (ax1, ax2) = plt.subplots(nrows=1, ncols=2, sharey=True, figsize=(20, 5))\n",
     "fontsize = 20\n",
     "\n",
-    "utils.plot_unit_distributions(\n",
-    "    df=df_full, variable=\"channel\", treatment=None, bins=None, axis=ax1,\n",
-    "),\n",
+    "(\n",
+    "    utils.plot_unit_distributions(\n",
+    "        df=df_full,\n",
+    "        variable=\"channel\",\n",
+    "        treatment=None,\n",
+    "        bins=None,\n",
+    "        axis=ax1,\n",
+    "    ),\n",
+    ")\n",
     "\n",
     "ax1.set_xlabel(\"Channel\", fontsize=fontsize)\n",
     "ax1.set_ylabel(\"Counts\", fontsize=fontsize)\n",
@@ -634,7 +648,11 @@
     "ax1.set_xticklabels(ax1.get_xticklabels())\n",
     "\n",
     "utils.plot_unit_distributions(\n",
-    "    df=df_full, variable=\"channel\", treatment=\"treatment\", bins=None, axis=ax2,\n",
+    "    df=df_full,\n",
+    "    variable=\"channel\",\n",
+    "    treatment=\"treatment\",\n",
+    "    bins=None,\n",
+    "    axis=ax2,\n",
     ")\n",
     "\n",
     "ax2.set_xlabel(\"Channel\", fontsize=fontsize)\n",
@@ -672,9 +690,15 @@
     "fig, (ax1, ax2) = plt.subplots(nrows=1, ncols=2, sharey=True, figsize=(20, 5))\n",
     "fontsize = 20\n",
     "\n",
-    "utils.plot_unit_distributions(\n",
-    "    df=df_full, variable=\"visit\", treatment=None, bins=None, axis=ax1,\n",
-    "),\n",
+    "(\n",
+    "    utils.plot_unit_distributions(\n",
+    "        df=df_full,\n",
+    "        variable=\"visit\",\n",
+    "        treatment=None,\n",
+    "        bins=None,\n",
+    "        axis=ax1,\n",
+    "    ),\n",
+    ")\n",
     "\n",
     "ax1.set_xlabel(\"Visit\", fontsize=fontsize)\n",
     "ax1.set_ylabel(\"Counts\", fontsize=fontsize)\n",
@@ -683,7 +707,11 @@
     "ax1.set_xticklabels(ax1.get_xticklabels())\n",
     "\n",
     "utils.plot_unit_distributions(\n",
-    "    df=df_full, variable=\"visit\", treatment=\"treatment\", bins=None, axis=ax2,\n",
+    "    df=df_full,\n",
+    "    variable=\"visit\",\n",
+    "    treatment=\"treatment\",\n",
+    "    bins=None,\n",
+    "    axis=ax2,\n",
     ")\n",
     "\n",
     "ax2.set_xlabel(\"Visit\", fontsize=fontsize)\n",
@@ -721,9 +749,15 @@
     "fig, (ax1, ax2) = plt.subplots(nrows=1, ncols=2, sharey=True, figsize=(20, 5))\n",
     "fontsize = 20\n",
     "\n",
-    "utils.plot_unit_distributions(\n",
-    "    df=df_full, variable=\"conversion\", treatment=None, bins=None, axis=ax1,\n",
-    "),\n",
+    "(\n",
+    "    utils.plot_unit_distributions(\n",
+    "        df=df_full,\n",
+    "        variable=\"conversion\",\n",
+    "        treatment=None,\n",
+    "        bins=None,\n",
+    "        axis=ax1,\n",
+    "    ),\n",
+    ")\n",
     "\n",
     "ax1.set_xlabel(\"Conversion\", fontsize=fontsize)\n",
     "ax1.set_ylabel(\"Counts\", fontsize=fontsize)\n",
@@ -732,7 +766,11 @@
     "ax1.set_xticklabels(ax1.get_xticklabels())\n",
     "\n",
     "utils.plot_unit_distributions(\n",
-    "    df=df_full, variable=\"conversion\", treatment=\"treatment\", bins=None, axis=ax2,\n",
+    "    df=df_full,\n",
+    "    variable=\"conversion\",\n",
+    "    treatment=\"treatment\",\n",
+    "    bins=None,\n",
+    "    axis=ax2,\n",
     ")\n",
     "\n",
     "ax2.set_xlabel(\"Conversion\", fontsize=fontsize)\n",
@@ -770,9 +808,15 @@
     "fig, (ax1, ax2) = plt.subplots(nrows=1, ncols=2, sharey=True, figsize=(20, 5))\n",
     "fontsize = 20\n",
     "\n",
-    "utils.plot_unit_distributions(\n",
-    "    df=df_full, variable=\"spend\", treatment=None, bins=25, axis=ax1,\n",
-    "),\n",
+    "(\n",
+    "    utils.plot_unit_distributions(\n",
+    "        df=df_full,\n",
+    "        variable=\"spend\",\n",
+    "        treatment=None,\n",
+    "        bins=25,\n",
+    "        axis=ax1,\n",
+    "    ),\n",
+    ")\n",
     "\n",
     "ax1.set_xlabel(\"Spend\", fontsize=fontsize)\n",
     "ax1.set_ylabel(\"Counts\", fontsize=fontsize)\n",
@@ -781,7 +825,11 @@
     "ax1.set_xticklabels(ax1.get_xticklabels(), rotation=30)\n",
     "\n",
     "utils.plot_unit_distributions(\n",
-    "    df=df_full, variable=\"spend\", treatment=\"treatment\", bins=25, axis=ax2,\n",
+    "    df=df_full,\n",
+    "    variable=\"spend\",\n",
+    "    treatment=\"treatment\",\n",
+    "    bins=25,\n",
+    "    axis=ax2,\n",
     ")\n",
     "\n",
     "ax2.set_xlabel(\"Spend\", fontsize=fontsize)\n",
@@ -1165,7 +1213,11 @@
     "y_split = np.append(y_os, y_women, axis=0)\n",
     "w_split = np.append(w_os, w_women, axis=0)\n",
     "\n",
-    "X_split.shape, y_split.shape, w_split.shape  # Should all be equal in the first dimension"
+    "(\n",
+    "    X_split.shape,\n",
+    "    y_split.shape,\n",
+    "    w_split.shape,\n",
+    ")  # Should all be equal in the first dimension"
    ]
   },
   {
@@ -1823,9 +1875,7 @@
     "        )\n",
     "        model_eval_dict[dataset].update(\n",
     "            {\n",
-    "                str(model)\n",
-    "                .split(\".\")[-1]\n",
-    "                .split(\" \")[0]: {\n",
+    "                str(model).split(\".\")[-1].split(\" \")[0]: {\n",
     "                    \"avg_preds\": avg_preds,\n",
     "                    \"all_preds\": all_preds,\n",
     "                    \"avg_eval\": avg_eval,\n",
